<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_bilhar3">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="230dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logowhite"
        android:contentDescription="@string/logo_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_background"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblregister"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginTop="0dp"/>

        <EditText
            android:id="@+id/etFullName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/Gray"
            android:hint="@string/lblfullname"
            android:inputType="textPersonName"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/Gray"
            android:hint="@string/hintemail"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPhone"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/Gray"
            android:hint="@string/lblphone"
            android:autofillHints="phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etUsernameRegister"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/Gray"
            android:hint="@string/lbluser"
            android:autofillHints="username"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/etPasswordRegister"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/Gray"
            android:hint="@string/lblpassword"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etConfirmPasswordRegister"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/Gray"
            android:hint="@string/lblrepeatpassword"
            android:autofillHints="retype password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/ButtonStyle"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_button"
            android:text="@string/register"/>

    </LinearLayout>
</LinearLayout>