<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mesa"
    tools:context=".HomeActivity">
    <FrameLayout
        android:id="@+id/frameProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frameSchedule"
        android:layout_margin="16dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintWidth_percent="0.6">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="135dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/labelProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perfil"
                    android:textSize="20sp"
                    android:textColor="@color/White"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/frameSchedule"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/frameProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frameScoreboard"
        android:layout_margin="16dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintWidth_percent="0.6">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewScheduleLesson"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="135dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/labelScheduleLesson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agendar_aula"
                    android:textSize="18sp"
                    android:textColor="@color/White"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/frameScoreboard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/frameSchedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintWidth_percent="0.6">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewScoreboard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="135dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/labelScoreboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scoreboard"
                    android:textSize="18sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
 